<resources>
    <string name="facebook_app_id_debug">823525551027869</string>
    <string name="facebook_app_id_release">791688527544905</string>
    <string name="mixpanel_api_key">e0b4fc9fdf720bb40b6cbefddb9678f3</string>

    <string name="btn_submit_text">SUBMIT</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="TermsAndConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_build_bento">BuildBentoActivity</string>
    <string name="btn_continue_text">CONTINUE</string>
    <string name="title_activity_delivery_location">DeliveryLocationActivity</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="iagree_label">I agree to meet my driver curbside.</string>
    <string name="alert_tab_checkbox">Please tap the checkbox to confirm the curbside delivery.</string>
    <string name="delivery_alert_no_address">Please enter your delivery address.</string>
    <string name="title_activity_error_invalid_address">ErrorInvalidAddressActivity</string>
    <string name="title_activity_bento_select_main">BentoSelectMainActivity</string>
    <string name="build_bento_price">Starting at $%s</string>
    <string name="build_bento_eta">ETA: %s MIN.</string>

    <string name="bento_builder_actionbar_title">Build Your Bento</string>
    <string name="delivery_location_actionbar_title">Delivery Location</string>
    <string name="error_invalid_address_text">We don\'t deliver there yet! Available locations are highlighted above. Enter your email below and we\'ll buy you a free Bento when we come to your area.</string>
    <string name="error_delivery_address_text_title">Bummer!</string>
    <string name="title_activity_bento_select_side">BentoSelectSideActivity</string>
    <string name="error_soulded_title">Oh no, we sold out!</string>
    <string name="error_soulded_text">Demand is too high! Enter your email below and we\'ll tell you when we\'re back in stock.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_complete_order">CompleteOrderActivity</string>
    <string name="title_activity_order_confirmed">OrderConfirmedActivity</string>
    <string name="title_activity_enter_credit_card">EnterCreditCardActivity</string>
    <string name="build_bento_toolbar_title_oa">%1$s, %2$s, %3$s-%4$s</string>
    <string name="build_bento_spinner_item_oa">%1$s, %2$s</string>
    <string name="build_bento_btn_time_oa">%1$s - %2$s %3$s:%4$2s</string>
    <string name="order_status_eta">ETA: %1$s min</string>

    <string name="summary_bento_oa_delivery_day">%1$s, %2$s</string>
    <string name="summary_bento_oa_delivery_time">%1$s-%2$s</string>
    <string name="summary_bento_od_delivery_time">%1$d-%2$d</string>
    <string name="bento_api_url_autocomplete"> https://maps.googleapis.com/maps/api/place/autocomplete/json?key=%1$s&amp;input=%2$s&amp;radius=500</string>
    <string name="bento_api_url_autocomplete_location"> https://maps.googleapis.com/maps/api/place/autocomplete/json?key=%1$s&amp;input=%2$s&amp;location=%3$f,%4$f&amp;radius=500</string>
    <string name="google_api_url_direction">https://maps.googleapis.com/maps/api/directions/json?origin=%1$s,%2$s&amp;destination=%3$s,%4$s&amp;key=%5$s&amp;units=metric</string>


    <string name="edit_hint_enter_phone">Enter your phone number</string>
    <string name="edit_hint_confirm_phone">Confirm your phone number</string>
    <string name="alert_error_enter_valid_number">Please enter a valid phone number.</string>
    <string name="alert_error_mismatch">Phone numbers entered must match.</string>
    <string name="processing_label">Processing...</string>
    <string name="searching_label">Searching...</string>

    <string name="error_web_request">There is an error, please try again later</string>
    <string name="error_phone_request">There was an problem at changing your phone, try it again later</string>
    <string name="error_sold_out_items">There are sold out items, please change them before continue \n%s</string>
    <string name="error_location_place">Please move the map to set your location</string>
    <string name="error_location_address">Please enter your address again</string>


    <string name="cardNumber">1234 5678 9012 3456</string>
    <string name="save">Save</string>

    <string name="ok">OK</string>
    <string name="title_activity_enter_phone_number">EnterPhoneNumberActivity</string>
    <string name="password">Password</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="thanks">Thanks!</string>
    <string name="email_hint">Enter your email</string>
    <string name="message_open">Thanks! We\'ll let you know when we\'re open.</string>
    <string name="title_activity_next_day_menu">NextDayMenuActivity</string>
    <string name="title_activity_credit_card">CreditCardActivity</string>
    <string name="title_activity_update_needed">UpdateNeededActivity</string>
    <string name="delicious_asian_food">Delicious Asian Food Delivered in Minutes.</string>
    <string name="please_update">Please upgrade!</string>
    <string name="an_update_is_available">An update is available on Google Play.</string>
    <string name="update_for_deliciousness">UPDATE FOR DELICIOUSNESS</string>
    <string name="delivery_enter_address">Enter your delivery address</string>
    <string name="add_another_bento">ADD ANOTHER BENTO</string>
    <string name="add_main_dish">+ MAIN DISH</string>
    <string name="add_side">+ SIDE</string>
    <string name="added_to_bento">IN YOUR BENTO</string>
    <string name="add_to_bento">ADD TO BENTO</string>
    <string name="add_bento_to_cart">ADD BENTO TO CART</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="main_dish">Main Dish</string>
    <string name="add_on_dishes">Add-ons</string>
    <string name="question_concerns">Questions or Concerns?</string>
    <string name="btn_ok_text">Ok</string>
    <string name="zero_dollar">$0</string>
    <string name="change">CHANGE</string>
    <string name="edit">EDIT</string>
    <string name="change_phone_number">CHANGE PHONE NUMBER</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="mmyy">MM/YY</string>
    <string name="hash">####</string>
    <string name="cvc">CVC</string>
    <string name="message">message</string>
    <string name="fa_facebook">&#xf09a;</string>
    <string name="fa_twitter">&#xf099;</string>
    <string name="share">SHARE</string>
    <string name="tweet">TWEET</string>
    <string name="text">TEXT</string>
    <string name="fa_comment">&#xf075;</string>
    <string name="email">EMAIL</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_question_circle">&#xf059;</string>
    <string name="fa_phone">&#xf095;</string>

    <string name="money_format">$%.2f</string>
    <string name="money_main_format"> $%s </string>
    <string name="tip_percentage">%.0f</string>

    <string name="error_loading_dishes">There is a problem loading the dishes, please try again later</string>
    <string name="error_restarting_app">There was a change in the menu, please order again</string>
    <string name="error_send_order">There was a problem sending your order, please try again</string>
    <string name="error_sign_up_user">There was a problem, please try again</string>
    <string name="error_closed_title">We\'re currently closed!</string>
    <string name="error_closed_text">Bento opens at 5pm today! We\'re cookin\' up some delicious dinner. \n Get excited!</string>
    <string name="error_closed_input_mail_hint">Enter email for \'We\'re Open\'! email</string>
    <string name="error_no_valid_delivery_address">Please enter a valid delivery address.</string>
    <string name="error_no_user_log_in">Please register before completing an order.</string>
    <string name="error_no_credit_card">Please add a valid credit card before completing an order.</string>
    <string name="error_new_menu_type">There is a new menu available</string>
    <string name="error_no_location_found">We cant get your </string>
    <string name="error_no_sms_app">Sorry you don\'t have apps to send SMS</string>
    <string name="error_no_email_app">There is no email client installed</string>
    <string name="error_no_call_app">There is no call client installed</string>
    <string name="error_no_facebook_sign_in">An error occur while trying to sign in with Facebook</string>
    <string name="error_no_internet">There is a problem with the internet connection, please try again</string>
    <string name="error_no_internet_connection">There is not internet connection</string>
    <string name="error_no_address_from_location">Sorry there was a problem getting your Address, try to move the map or write your address directly</string>
</resources>
