<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bentonow.bentonow.ErrorClosedActivity"
    android:id="@+id/base_relative_layout">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/bg_error_closed"
        android:scaleType="centerCrop"/>
    <!--<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/actionbar_padding">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_bento_text"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ab_help"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/actionbar_padding"
        />-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        >
        <include layout="@layout/actionbar_center_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cont"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/text_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/general_padding">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_soulded_title"
                android:id="@+id/textView"
                android:textIsSelectable="false"
                android:textSize="@dimen/title1"
                android:textColor="@color/white"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_soulded_text"
                android:id="@+id/textView2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            >
            <ImageView
                android:padding="@dimen/ic_email_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/error_closed_input_mail_hint"
                android:textSize="@dimen/text_small"
                android:background="#00000000"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/btn_green"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="@dimen/btn_padding"
                android:text="@string/btn_submit_text"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/ll_cont"
        android:padding="@dimen/btn_padding">
        <TextView
            android:layout_weight="1"
            android:text="@string/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
        <TextView
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/white"
            android:text="@string/TermsAndConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
