<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bentonow.bentonow.controllers.errors.ErrorActivity">

    <!-- BACKGROUND -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_error_closed" />

    <!-- ACTIONBAR -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <include layout="@layout/actionbar_center_logo" />
    </LinearLayout>

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:id="@+id/ll_cont"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/linearLayout"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/general_padding"
            android:paddingLeft="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/error_closed_title"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="@dimen/title1" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/error_closed_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/ic_email_padding"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:hint="@string/error_closed_input_mail_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_green"
            android:orientation="horizontal">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center"
                android:onClick="onSubmitPressed"
                android:padding="@dimen/btn_padding"
                android:text="@string/btn_submit_text"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_padding"
            android:orientation="vertical">

            <com.bentonow.bentonow.ui.BackendTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/message_open"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:key="open-line1" />

            <com.bentonow.bentonow.ui.BackendTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/message_open"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:key="open-line2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding">

            <Button
                android:id="@+id/btn_next_day_menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border_lineal_white"
                android:gravity="center"
                android:onClick="onNextDayMenuPressed"
                android:padding="@dimen/btn_padding"
                android:text="See next day Menu"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <!-- FOOTER -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/btn_padding">

        <com.bentonow.bentonow.ui.BackendButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onPrivacyPolicyPressed"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            app:key="closed-privacy-policy-link" />

        <com.bentonow.bentonow.ui.BackendButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:onClick="onTermAndConditionsPressed"
            android:text="@string/TermsAndConditions"
            android:textColor="@color/white"
            app:key="closed-terms-link" />
    </LinearLayout>

    <!-- OVERLAY -->
    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#90000000"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/overlay_message"
                android:orientation="vertical">

                <com.bentonow.bentonow.ui.BackendTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/message_open"
                    app:key="closed-confirmation-text" />

                <com.bentonow.bentonow.ui.BackendTextView
                    android:id="@+id/btn_ok"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_green_corner_left_right_bottom"
                    android:gravity="center"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    app:key="closed-confirmation-button" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
