<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controllers.errors.NextDayMenuActivity">

    <!-- bento_toolbar -->
    <LinearLayout
        android:id="@+id/ActionBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <include layout="@layout/bento_toolbar" />
    </LinearLayout>

    <!-- content -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/ActionBarContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/main_dishes"
                android:textColor="@color/white" />

            <com.bentonow.bentonow.ui.NextListView
                android:id="@+id/list_next_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:dividerHeight="0dp"
                tools:listitem="@layout/list_item_dish_next_main" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/side_dishes"
                android:textColor="@color/white" />

            <com.bentonow.bentonow.ui.BentoGridView
                android:id="@+id/grid_next_side"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fillViewport="true"
                android:numColumns="2"
                tools:listitem="@layout/list_item_add" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/add_on_dishes"
                android:textColor="@color/white" />

            <com.bentonow.bentonow.ui.NextListView
                android:id="@+id/list_next_add_on"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:dividerHeight="0dp"
                tools:listitem="@layout/list_item_dish_next_main" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
